# -blog_platform

./: .dockerignore  .gitignore  README.md  docker-compose.yml  fly.toml  pyproject.toml  pytest.ini
.github/workflows/: blank.yml
.pgdata/: postgresql.conf  postmaster.pid
.pgdata/base/1/: 1255  1259  2619  2619_vm  2659  2663  2678  2681  2692  2693  2696  2836  2838  2840  2841
.pgdata/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  2228  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  2602  2602_fsm  2602_vm  2603  (+144 more)
.pgdata/base/4/: 1259  13401  2618  2674  2675  2682  2691
.pgdata/base/5/: 1259  2619  2658  2662  2673  2679  2690  2703  2704  2839  3455
.pgdata/global/: 1260  1262  2671  2672  2676  pg_control
blog/: settings.py  urls.py
blog/base/: admin.py  models.py  urls.py  views.py
blog/base/migrations/: 0001_initial.py  0002_post_image.py
blog/base/templates/base/: footer.html  post_detail.html  post_list.html
blog/base/tests/: tests.py
contrib/: .env-semples  env-semples
staticfiles/css/: style.css
