[tool.poetry]
name = "blog-platform"
version = "0.1.0"
description = ""
authors = ["Davidson <deivisonj1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
flake8 = "^7.1.1"
pytest = "^8.3.3"
python-decouple = "^3.8"
dj-database-url = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
