[tool.poetry]
name = "blog-platform"
version = "0.1.0"
description = ""
authors = ["Davidson <deivisonj1@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-s3-folder-storage = "^0.5"
python-decouple = "^3.8"
dj-database-url = "^2.2.0"
flake8 = "^7.1.0"
collectfast = "^2.2.0"
django-debug-toolbar = "^4.4.6"

pytest = "^8.3.2"
pillow = "^10.4.0"
ipython = "^8.27.0"
ipdb = "^0.13.13"
model-bakery = "^1.19.5"
psycopg2 = "^2.9.9"
gunicorn = "^23.0.0"
sentry-sdk = "^2.15.0"
markdown2 = "^2.5.0"
django = "^5.1.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"